LPS-77699 Update Translations

--- a/modules/private/apps/portal-workflow/portal-workflow-kaleo-designer-web/src/main/resources/content/Language_es.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-kaleo-designer-web/src/main/resources/content/Language_es.properties
@@ -4,7 +4,7 @@ actions-type=Tipo de acciones
 add-anchor=Añadir anclaje
 add-draft=Añadir borrador
 add-section=Añadir sección
-are-you-sure-you-want-to-delete-the-selected-connectors=¿Está seguro que desea eliminar el conector seleccionado? (Automatic Translation)
+are-you-sure-you-want-to-delete-the-selected-connectors=¿Está seguro de que quiere eliminar los conectores seleccionados?
 are-you-sure-you-want-to-delete-the-selected-nodes=¿Está seguro de que quiere eliminar los nodos seleccionados?
 asset-creator=Creador de activos
 assignment-type=Tipo de asignación
