--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-web/src/main/resources/content/Language_ca.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-web/src/main/resources/content/Language_ca.properties
@@ -1,17 +1,17 @@
-entries=Entrades (Automatic Translation)
-items=Elements (Automatic Translation)
-next=Següent (Automatic Translation)
-no-current-metrics=No mètriques actual (Automatic Translation)
-no-results-were-found=S'ha trobat cap resultat. (Automatic Translation)
-on-time=A temps (Automatic Translation)
-once-there-are-active-processes-metrics-will-appear-here=Una vegada que hi ha processos actius, mètriques apareixerà aquí. (Automatic Translation)
-open-processes-summary=Resum de processos oberts (Automatic Translation)
-overdue=Fa molt de temps (Automatic Translation)
-previous=Anterior (Automatic Translation)
-process-name=Nom de procés (Automatic Translation)
-search-for=Buscar... (Automatic Translation)
-showing=S'estan mostrant (Automatic Translation)
-showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
-total-open=Total obertes (Automatic Translation)
-x-item={0} item (Automatic Copy)
-x-items={0} items (Automatic Copy)
+entries=Entrades
+items=Elements
+next=Següent
+no-current-metrics=No hi ha analítica actual
+no-results-were-found=No s'ha trobat cap resultat.
+on-time=Puntual
+once-there-are-active-processes-metrics-will-appear-here=Quan hi hagi processos actius, l'analítica apareixerà aquí.
+open-processes-summary=Obre el resum de processos
+overdue=Amb retard
+previous=Anterior
+process-name=Nom del procés
+search-for=Cerca...
+showing=Mostrant
+showing-x-to-x-of-x-entries=Mostrant de la {0} a la {1} de {2} entrades.
+total-open=Total obert
+x-item={0} elements
+x-items={0} elements
