--- a/modules/private/apps/saml/saml-web/src/main/resources/content/Language_ca.properties
+++ b/modules/private/apps/saml/saml-web/src/main/resources/content/Language_ca.properties
@@ -17,7 +17,7 @@ certificate-fingerprints=Empremtes digitals del certificat
 certificate-needs-auth=Ja hi ha una credencial amb un àlies coincident al keystore SAML, però s'ha d'autenticar abans de poder-la utilitzar.
 certificate-url=URL del certificat
 common-name=Nom comú
-create-certificate=Crea el certificat
+create-certificate=Creeu un certificat
 download-certificate=Baixa el certificat
 dsa=DSA
 encrypted=Xifrat
