--- a/modules/private/apps/sharepoint-rest/sharepoint-rest-repository/src/main/resources/content/Language_es.properties
+++ b/modules/private/apps/sharepoint-rest/sharepoint-rest-repository/src/main/resources/content/Language_es.properties
@@ -3,8 +3,8 @@ authorization-token-endpoint=Punto de conexión de token de autorización
 library-path=Ruta de biblioteca
 sharepoint=SharePoint
 sharepoint-repository-configuration-name=OAuth2 de SharePoint
-sharepoint-results-source-id=Sharepoint Results SourceID (Automatic Copy)
-sharepoint-search-configuration-name=Sharepoint Search (Automatic Copy)
+sharepoint-results-source-id=Identificador de origen de resultados de SharePoint
+sharepoint-search-configuration-name=Búsqueda de SharePoint
 site-absolute-url=URL absoluta del sitio
 site-domain=Dominio del sitio
 tenant-id=ID de inquilino
