--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-web/src/main/resources/content/Language_es.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-web/src/main/resources/content/Language_es.properties
@@ -1,17 +1,17 @@
-entries=Entradas de (Automatic Translation)
-items=Artículos (Automatic Translation)
-next=Siguiente (Automatic Translation)
-no-current-metrics=No métricas actuales (Automatic Translation)
-no-results-were-found=No se han encontrado. (Automatic Translation)
-on-time=En hora (Automatic Translation)
-once-there-are-active-processes-metrics-will-appear-here=Una vez que hay procesos activos, métricas aparecerán aquí. (Automatic Translation)
-open-processes-summary=Resumen de procesos abiertos (Automatic Translation)
-overdue=Vencidas (Automatic Translation)
-previous=Anterior (Automatic Translation)
-process-name=Nombre del proceso (Automatic Translation)
-search-for=Búsqueda para... (Automatic Translation)
-showing=Mostrando (Automatic Translation)
-showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
-total-open=Total abierta (Automatic Translation)
-x-item={0} item (Automatic Copy)
-x-items={0} items (Automatic Copy)
+entries=Entradas
+items=Elementos
+next=Siguiente
+no-current-metrics=Sin métricas actuales
+no-results-were-found=No se encontraron resultados.
+on-time=A tiempo
+once-there-are-active-processes-metrics-will-appear-here=Cuando haya procesos activos, las métricas se mostrarán aquí.
+open-processes-summary=Resumen de procesos abiertos
+overdue=Vencido
+previous=Anterior
+process-name=Nombre del proceso
+search-for=Buscar…
+showing=Mostrando
+showing-x-to-x-of-x-entries=Mostrando {0} a {1} de {2} entradas.
+total-open=Total abiertos
+x-item={0} elemento
+x-items={0} elementos
