LPS-89014 | LPS-91445 Build lang

--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_ar.properties
@@ -1,5 +1,9 @@
+a-duration-time-is-required=وقت مدة المطلوبة. (Automatic Translation)
+a-name-is-required=اسم مطلوب. (Automatic Translation)
+an-sla-with-the-same-name-already-exists=اتفاقية مستوى الخدمة بنفس الاسم موجود مسبقاً. (Automatic Translation)
 entries=إدخالات (Automatic Translation)
 items=العناصر (Automatic Translation)
+metrics=المقاييس (Automatic Translation)
 next=القادم (Automatic Translation)
 no-current-metrics=لا المقاييس الحالية (Automatic Translation)
 no-results-were-found=تم العثور على أية نتائج. (Automatic Translation)
