--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_bg.properties
@@ -1,5 +1,9 @@
+a-duration-time-is-required=Продължителност време е необходимо. (Automatic Translation)
+a-name-is-required=Името е задължително. (Automatic Translation)
+an-sla-with-the-same-name-already-exists=SLA със същото име вече съществува. (Automatic Translation)
 entries=Записи (Automatic Translation)
 items=Елементи (Automatic Translation)
+metrics=Показатели (Automatic Translation)
 next=Следваща (Automatic Translation)
 no-current-metrics=Няма текущи показатели (Automatic Translation)
 no-results-were-found=Не са намерени резултати. (Automatic Translation)
