--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_cs.properties
@@ -1,5 +1,9 @@
+a-duration-time-is-required=Doba trvání je vyžadován. (Automatic Translation)
+a-name-is-required=Je požadován název. (Automatic Translation)
+an-sla-with-the-same-name-already-exists=SLA se stejným názvem již existuje. (Automatic Translation)
 entries=Položky (Automatic Translation)
 items=Položky (Automatic Translation)
+metrics=Metriky (Automatic Translation)
 next=Další (Automatic Translation)
 no-current-metrics=Žádná aktuální metriky (Automatic Translation)
 no-results-were-found=Nebyly nalezeny žádné výsledky. (Automatic Translation)
