--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_el.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_el.properties
@@ -1,5 +1,9 @@
+a-duration-time-is-required=Απαιτείται μια χρονική διάρκεια. (Automatic Translation)
+a-name-is-required=Απαιτείται ένα όνομα. (Automatic Translation)
+an-sla-with-the-same-name-already-exists=Μια SLA με το ίδιο όνομα υπάρχει ήδη. (Automatic Translation)
 entries=Καταχωρήσεις (Automatic Translation)
 items=Στοιχεία (Automatic Translation)
+metrics=Μετρήσεις (Automatic Translation)
 next=Επόμενη (Automatic Translation)
 no-current-metrics=Δεν υπάρχει τρέχουσα μετρήσεις (Automatic Translation)
 no-results-were-found=Δεν βρέθηκαν αποτελέσματα. (Automatic Translation)
