--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_en.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_en.properties
@@ -1,5 +1,9 @@
+a-duration-time-is-required=A duration time is required.
+a-name-is-required=A name is required.
+an-sla-with-the-same-name-already-exists=An SLA with the same name already exists.
 entries=Entries
 items=Items
+metrics=Metrics
 next=Next
 no-current-metrics=No Current Metrics
 no-results-were-found=No results were found.
