--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_es.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_es.properties
@@ -1,5 +1,9 @@
+a-duration-time-is-required=Se requiere un tiempo de duración. (Automatic Translation)
+a-name-is-required=Un nombre es necesario. (Automatic Translation)
+an-sla-with-the-same-name-already-exists=Un SLA con el mismo nombre ya existe. (Automatic Translation)
 entries=Entradas
 items=Elementos
+metrics=Métricas de (Automatic Translation)
 next=Siguiente
 no-current-metrics=Sin métricas actuales
 no-results-were-found=No se encontraron resultados.
