--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_et.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_et.properties
@@ -1,5 +1,9 @@
+a-duration-time-is-required=Kestus aega kulub. (Automatic Translation)
+a-name-is-required=Nimi on nõutav. (Automatic Translation)
+an-sla-with-the-same-name-already-exists=SLA sama nimega on juba olemas. (Automatic Translation)
 entries=Kanded (Automatic Translation)
 items=Üksused (Automatic Translation)
+metrics=Mõõdikud (Automatic Translation)
 next=Järgmise (Automatic Translation)
 no-current-metrics=Ei ole praeguse mõõdikud (Automatic Translation)
 no-results-were-found=Tulemusi ei leitud. (Automatic Translation)
