--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_fa.properties
@@ -1,5 +1,9 @@
+a-duration-time-is-required=مدت زمان مورد نیاز است. (Automatic Translation)
+a-name-is-required=نام مورد نیاز است. (Automatic Translation)
+an-sla-with-the-same-name-already-exists=انجمن گفتگوی با همین نام از قبل وجود دارد. (Automatic Translation)
 entries=نوشته های (Automatic Translation)
 items=موارد (Automatic Translation)
+metrics=متریک (Automatic Translation)
 next=بعدی (Automatic Translation)
 no-current-metrics=معیارهای فعلی هیچ (Automatic Translation)
 no-results-were-found=نتیجه ای یافت نشد. (Automatic Translation)
