--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_fr.properties
@@ -1,5 +1,9 @@
+a-duration-time-is-required=Une durée de séjour est nécessaire. (Automatic Translation)
+a-name-is-required=Un nom est requis. (Automatic Translation)
+an-sla-with-the-same-name-already-exists=Un SLA portant le même nom existe déjà. (Automatic Translation)
 entries=Entrées (Automatic Translation)
 items=Éléments (Automatic Translation)
+metrics=Métrique (Automatic Translation)
 next=Prochaine (Automatic Translation)
 no-current-metrics=Aucun paramètres actuels (Automatic Translation)
 no-results-were-found=Été trouvé aucun résultat. (Automatic Translation)
