--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_hi_IN.properties
@@ -1,5 +1,9 @@
+a-duration-time-is-required=एक अवधि समय की आवश्यकता है । (Automatic Translation)
+a-name-is-required=एक नाम की आवश्यकता है । (Automatic Translation)
+an-sla-with-the-same-name-already-exists=समान नाम वाला SLA पहले से मौजूद है. (Automatic Translation)
 entries=प्रविष्टियों (Automatic Translation)
 items=आइटम (Automatic Translation)
+metrics=मैट्रिक्स (Automatic Translation)
 next=अगले (Automatic Translation)
 no-current-metrics=कोई वर्तमान मीट्रिक (Automatic Translation)
 no-results-were-found=कोई परिणाम नहीं मिले । (Automatic Translation)
