--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_hu.properties
@@ -1,5 +1,9 @@
+a-duration-time-is-required=Egy időtartam időre szükség. (Automatic Translation)
+a-name-is-required=Meg kell adni a nevét. (Automatic Translation)
+an-sla-with-the-same-name-already-exists=Már létezik egy azonos nevű SLA. (Automatic Translation)
 entries=Bejegyzések (Automatic Translation)
 items=Elemek (Automatic Translation)
+metrics=Metrikák (Automatic Translation)
 next=Következő (Automatic Translation)
 no-current-metrics=Nem aktuális mutatókat (Automatic Translation)
 no-results-were-found=Eredmények nem találtak. (Automatic Translation)
