--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_in.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_in.properties
@@ -1,5 +1,9 @@
+a-duration-time-is-required=Durasi waktu diperlukan. (Automatic Translation)
+a-name-is-required=Nama diperlukan. (Automatic Translation)
+an-sla-with-the-same-name-already-exists=SLA dengan nama yang sama sudah ada. (Automatic Translation)
 entries=Entri (Automatic Translation)
 items=Item (Automatic Translation)
+metrics=Metrik (Automatic Translation)
 next=Berikutnya (Automatic Translation)
 no-current-metrics=Metrik yang saat ini tidak ada (Automatic Translation)
 no-results-were-found=Tidak ada hasil ditemukan. (Automatic Translation)
