--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_it.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_it.properties
@@ -1,5 +1,9 @@
+a-duration-time-is-required=È necessario un tempo di durata. (Automatic Translation)
+a-name-is-required=È richiesto un nome. (Automatic Translation)
+an-sla-with-the-same-name-already-exists=Un contratto di servizio con lo stesso nome esiste già. (Automatic Translation)
 entries=Voci (Automatic Translation)
 items=Elementi (Automatic Translation)
+metrics=Metriche (Automatic Translation)
 next=Successivo (Automatic Translation)
 no-current-metrics=Nessuna metrica corrente (Automatic Translation)
 no-results-were-found=Nessun risultato trovato. (Automatic Translation)
