--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_iw.properties
@@ -1,5 +1,9 @@
+a-duration-time-is-required=משך זמן נדרש. (Automatic Translation)
+a-name-is-required=שם נדרש. (Automatic Translation)
+an-sla-with-the-same-name-already-exists=SLA בעלי שם זהה כבר קיים. (Automatic Translation)
 entries=ערכי (Automatic Translation)
 items=פריטים (Automatic Translation)
+metrics=מדדים (Automatic Translation)
 next=הבא (Automatic Translation)
 no-current-metrics=אין מדדים הנוכחי (Automatic Translation)
 no-results-were-found=לא נמצאו תוצאות. (Automatic Translation)
