--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_ko.properties
@@ -1,5 +1,9 @@
+a-duration-time-is-required=기간 시간이 필요 합니다. (Automatic Translation)
+a-name-is-required=이름이 필요 합니다. (Automatic Translation)
+an-sla-with-the-same-name-already-exists=이름이 같은 SLA 이미 존재합니다. (Automatic Translation)
 entries=항목 (Automatic Translation)
 items=항목 (Automatic Translation)
+metrics=통계 (Automatic Translation)
 next=다음 (Automatic Translation)
 no-current-metrics=아니 현재 통계 (Automatic Translation)
 no-results-were-found=결과가 발견 됐다. (Automatic Translation)
