--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_lt.properties
@@ -1,5 +1,9 @@
+a-duration-time-is-required=Yra laikas, reikalingas. (Automatic Translation)
+a-name-is-required=Vardas yra būtinas. (Automatic Translation)
+an-sla-with-the-same-name-already-exists=Su SLA tokiu pačiu pavadinimu jau yra. (Automatic Translation)
 entries=Įrašai (Automatic Translation)
 items=Elementai (Automatic Translation)
+metrics=Metrika (Automatic Translation)
 next=Kitas (Automatic Translation)
 no-current-metrics=Nėra dabartinio metrika (Automatic Translation)
 no-results-were-found=Rezultatų nerasta. (Automatic Translation)
