--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_nb.properties
@@ -1,5 +1,9 @@
+a-duration-time-is-required=Det kreves en varigheten. (Automatic Translation)
+a-name-is-required=Det kreves et navn. (Automatic Translation)
+an-sla-with-the-same-name-already-exists=En SERVICENIVÅAVTALE med samme navn finnes allerede. (Automatic Translation)
 entries=Oppføringer (Automatic Translation)
 items=Elementer (Automatic Translation)
+metrics=Beregninger (Automatic Translation)
 next=Neste (Automatic Translation)
 no-current-metrics=Ingen gjeldende beregninger (Automatic Translation)
 no-results-were-found=Fant ingen resultater. (Automatic Translation)
