--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_pl.properties
@@ -1,5 +1,9 @@
+a-duration-time-is-required=Czas trwania jest wymagane. (Automatic Translation)
+a-name-is-required=Nazwa jest wymagana. (Automatic Translation)
+an-sla-with-the-same-name-already-exists=Umowy SLA o tej samej nazwie już istnieje. (Automatic Translation)
 entries=Wpisy (Automatic Translation)
 items=Elementy (Automatic Translation)
+metrics=Metryki (Automatic Translation)
 next=Następny (Automatic Translation)
 no-current-metrics=Nie aktualne wskaźniki (Automatic Translation)
 no-results-were-found=Brak wyników. (Automatic Translation)
