--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_pt_PT.properties
@@ -1,5 +1,9 @@
+a-duration-time-is-required=É necessário um tempo de duração. (Automatic Translation)
+a-name-is-required=Um nome é necessário. (Automatic Translation)
+an-sla-with-the-same-name-already-exists=Um SLA com o mesmo nome já existe. (Automatic Translation)
 entries=Entries (Automatic Copy)
 items=Items (Automatic Copy)
+metrics=Métricas de (Automatic Translation)
 next=Next (Automatic Copy)
 no-current-metrics=No Current Metrics (Automatic Copy)
 no-results-were-found=Não foram encontrados resultados. (Automatic Translation)
