--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_ro.properties
@@ -1,5 +1,9 @@
+a-duration-time-is-required=O durata de timp este necesar. (Automatic Translation)
+a-name-is-required=Un nume este necesară. (Automatic Translation)
+an-sla-with-the-same-name-already-exists=O SLA cu acelaşi nume există deja. (Automatic Translation)
 entries=Intrări (Automatic Translation)
 items=Elemente (Automatic Translation)
+metrics=Măsurătorile (Automatic Translation)
 next=Următoarea (Automatic Translation)
 no-current-metrics=Nici un curent de măsurare (Automatic Translation)
 no-results-were-found=S-au găsit nici un rezultat. (Automatic Translation)
