--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_ru.properties
@@ -1,5 +1,9 @@
+a-duration-time-is-required=Продолжительность времени не требуется. (Automatic Translation)
+a-name-is-required=Имя является обязательным. (Automatic Translation)
+an-sla-with-the-same-name-already-exists=ОАС с тем же именем уже существует. (Automatic Translation)
 entries=Записи (Automatic Translation)
 items=Элементы (Automatic Translation)
+metrics=Метрики (Automatic Translation)
 next=Следующая (Automatic Translation)
 no-current-metrics=Нет текущих метрики (Automatic Translation)
 no-results-were-found=Результаты не найдены. (Automatic Translation)
