--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_sk.properties
@@ -1,5 +1,9 @@
+a-duration-time-is-required=Čas trvania je potrebné. (Automatic Translation)
+a-name-is-required=Meno je povinné. (Automatic Translation)
+an-sla-with-the-same-name-already-exists=SLA s rovnakým názvom už existuje. (Automatic Translation)
 entries=Položky (Automatic Translation)
 items=Položky (Automatic Translation)
+metrics=Metriky (Automatic Translation)
 next=Ďalší (Automatic Translation)
 no-current-metrics=Žiadne aktuálne metriky (Automatic Translation)
 no-results-were-found=Neboli nájdené žiadne výsledky. (Automatic Translation)
