--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_sl.properties
@@ -1,5 +1,9 @@
+a-duration-time-is-required=Čas trajanja je potrebno. (Automatic Translation)
+a-name-is-required=Ime je potrebno. (Automatic Translation)
+an-sla-with-the-same-name-already-exists=SLA z istim imenom že obstaja. (Automatic Translation)
 entries=Postavke (Automatic Translation)
 items=Elementi (Automatic Translation)
+metrics=Meritve (Automatic Translation)
 next=Naslednji (Automatic Translation)
 no-current-metrics=Ni sedanje meritve (Automatic Translation)
 no-results-were-found=Ni zadetkov. (Automatic Translation)
