--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_th.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_th.properties
@@ -1,5 +1,9 @@
+a-duration-time-is-required=จำเป็นต้องมีระยะเวลา (Automatic Translation)
+a-name-is-required=ชื่อถูกต้อง (Automatic Translation)
+an-sla-with-the-same-name-already-exists=SLA ด้วยชื่อเดียวกันอยู่แล้ว (Automatic Translation)
 entries=รายการ (Automatic Translation)
 items=รายการ (Automatic Translation)
+metrics=ตัวชี้วัด (Automatic Translation)
 next=ถัดไป (Automatic Translation)
 no-current-metrics=ไม่มีวัดปัจจุบัน (Automatic Translation)
 no-results-were-found=ไม่พบผลลัพธ์ (Automatic Translation)
