--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_tr.properties
@@ -1,5 +1,9 @@
+a-duration-time-is-required=Bir süre zaman gereklidir. (Automatic Translation)
+a-name-is-required=Bir adı gereklidir. (Automatic Translation)
+an-sla-with-the-same-name-already-exists=Bir SLA aynı adla zaten var. (Automatic Translation)
 entries=Girişleri (Automatic Translation)
 items=Öğeleri (Automatic Translation)
+metrics=Ölçümleri (Automatic Translation)
 next=Sonraki (Automatic Translation)
 no-current-metrics=Hiçbir geçerli ölçümleri (Automatic Translation)
 no-results-were-found=Sonuç bulunamadı. (Automatic Translation)
