--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_uk.properties
@@ -1,5 +1,9 @@
+a-duration-time-is-required=Тривалість часу не потрібно. (Automatic Translation)
+a-name-is-required=Ім'я вимагається. (Automatic Translation)
+an-sla-with-the-same-name-already-exists=SLA із таким іменем уже існує. (Automatic Translation)
 entries=Записи (Automatic Translation)
 items=Елементи (Automatic Translation)
+metrics=Метрики (Automatic Translation)
 next=Наступний (Automatic Translation)
 no-current-metrics=Немає поточної метрики (Automatic Translation)
 no-results-were-found=Результатів не знайдено. (Automatic Translation)
