--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_vi.properties
@@ -1,5 +1,9 @@
+a-duration-time-is-required=Một thời gian thời gian là cần thiết. (Automatic Translation)
+a-name-is-required=Tên là bắt buộc. (Automatic Translation)
+an-sla-with-the-same-name-already-exists=Một SLA có cùng tên đã tồn tại. (Automatic Translation)
 entries=Mục (Automatic Translation)
 items=Khoản mục (Automatic Translation)
+metrics=Số liệu (Automatic Translation)
 next=Tiếp theo (Automatic Translation)
 no-current-metrics=Không có số liệu hiện nay (Automatic Translation)
 no-results-were-found=Không có kết quả được tìm thấy. (Automatic Translation)
