--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_zh_CN.properties
@@ -1,5 +1,9 @@
+a-duration-time-is-required=持续时间是必需的。 (Automatic Translation)
+a-name-is-required=名称是必需的。 (Automatic Translation)
+an-sla-with-the-same-name-already-exists=具有相同名称的 sla 已存在。 (Automatic Translation)
 entries=条目 (Automatic Translation)
 items=项目 (Automatic Translation)
+metrics=指标 (Automatic Translation)
 next=下 (Automatic Translation)
 no-current-metrics=没有当前指标 (Automatic Translation)
 no-results-were-found=未找到任何结果。 (Automatic Translation)
