--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_zh_TW.properties
@@ -1,5 +1,9 @@
+a-duration-time-is-required=持續時間是必需的。 (Automatic Translation)
+a-name-is-required=名稱是必需的。 (Automatic Translation)
+an-sla-with-the-same-name-already-exists=具有相同名稱的 sla 已存在。 (Automatic Translation)
 entries=條目 (Automatic Translation)
 items=專案 (Automatic Translation)
+metrics=指標 (Automatic Translation)
 next=下 (Automatic Translation)
 no-current-metrics=沒有當前指標 (Automatic Translation)
 no-results-were-found=未找到任何結果。 (Automatic Translation)
