--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_ja.properties
@@ -1,5 +1,9 @@
+a-duration-time-is-required=A duration time is required. (Automatic Copy)
+a-name-is-required=A name is required. (Automatic Copy)
+an-sla-with-the-same-name-already-exists=An SLA with the same name already exists. (Automatic Copy)
 entries=エントリー
 items=商品
+metrics=Metrics (Automatic Copy)
 next=次へ
 no-current-metrics=最新統計情報はありません
 no-results-were-found=結果が見つかりません
