--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_nl.properties
@@ -1,5 +1,9 @@
+a-duration-time-is-required=A duration time is required. (Automatic Copy)
+a-name-is-required=A name is required. (Automatic Copy)
+an-sla-with-the-same-name-already-exists=An SLA with the same name already exists. (Automatic Copy)
 entries=Invoer
 items=Items
+metrics=Metrics (Automatic Copy)
 next=Volgende
 no-current-metrics=Geen huidige meetwaarden
 no-results-were-found=Geen resultaten gevonden.
