--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_nl_BE.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_nl_BE.properties
@@ -1,5 +1,9 @@
+a-duration-time-is-required=A duration time is required. (Automatic Copy)
+a-name-is-required=A name is required. (Automatic Copy)
+an-sla-with-the-same-name-already-exists=An SLA with the same name already exists. (Automatic Copy)
 entries=Entries (Automatic Copy)
 items=Items (Automatic Copy)
+metrics=Metrics (Automatic Copy)
 next=Next (Automatic Copy)
 no-current-metrics=No Current Metrics (Automatic Copy)
 no-results-were-found=No results were found. (Automatic Copy)
