--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_pt_BR.properties
@@ -1,5 +1,9 @@
+a-duration-time-is-required=É necessário um tempo de duração. (Automatic Translation)
+a-name-is-required=Um nome é necessário. (Automatic Translation)
+an-sla-with-the-same-name-already-exists=Um SLA com o mesmo nome já existe. (Automatic Translation)
 entries=Entradas
 items=Itens
+metrics=Métricas de (Automatic Translation)
 next=Próximo
 no-current-metrics=Não há métricas atuais (Automatic Translation)
 no-results-were-found=Não foram encontrados resultados. (Automatic Translation)
