--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_ca.properties
@@ -17,5 +17,5 @@ search-for=Cerca...
 showing=Mostrant
 showing-x-to-x-of-x-entries=Mostrant de la {0} a la {1} de {2} entrades.
 total-open=Total obert
-x-item={0} elements
-x-items={0} elements
+x-item={0} Elements
+x-items={0} Elements
