--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_es.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_es.properties
@@ -17,5 +17,5 @@ search-for=Buscar…
 showing=Mostrando
 showing-x-to-x-of-x-entries=Mostrando {0} a {1} de {2} entradas.
 total-open=Total abiertos
-x-item={0} elemento
-x-items={0} elementos
+x-item={0} Elemento
+x-items={0} Elementos
