--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_fi.properties
@@ -17,5 +17,5 @@ search-for=Etsi...
 showing=Näytetään
 showing-x-to-x-of-x-entries=Näytetään {0} - {1} yhteensä {2} merkinnästä.
 total-open=Auki Yhteensä
-x-item={0} tuote
-x-items={0} tuotetta
+x-item={0} Tuote
+x-items={0} Tuotetta
