--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_nl.properties
@@ -17,5 +17,5 @@ search-for=Zoeken naar ...
 showing=Weergave
 showing-x-to-x-of-x-entries=Weergave van {0} tot {1} van {2} invoeren.
 total-open=Totaal open
-x-item={0} item
-x-items={0} items
+x-item={0} Item (Automatic Copy)
+x-items={0} Items (Automatic Copy)
