--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_pt_BR.properties
@@ -17,5 +17,5 @@ search-for=Procurar por... (Automatic Translation)
 showing=Mostrando
 showing-x-to-x-of-x-entries=Mostrando {0} a {1} de {2} entradas.
 total-open=Total aberto
-x-item={0} item
-x-items={0} items
+x-item={0} Item (Automatic Copy)
+x-items={0} Items (Automatic Copy)
