--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_sv.properties
@@ -17,5 +17,5 @@ search-for=Sök efter...
 showing=Visar
 showing-x-to-x-of-x-entries=Visar {0} för {1} av {2} poster.
 total-open=Antal öppna
-x-item={0} föremål
-x-items={0} föremål
+x-item={0} Föremål
+x-items={0} Föremål
