--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_hi_IN.properties
@@ -17,5 +17,5 @@ search-for=खोज के लिए.. । (Automatic Translation)
 showing=इस (Automatic Translation)
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
 total-open=कुल खुला (Automatic Translation)
-x-item={0} item (Automatic Copy)
-x-items={0} items (Automatic Copy)
+x-item={0} Item (Automatic Copy)
+x-items={0} Items (Automatic Copy)
