--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_zh_CN.properties
@@ -17,5 +17,5 @@ search-for=搜索..。 (Automatic Translation)
 showing=显示 (Automatic Translation)
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
 total-open=开盘总冠军 (Automatic Translation)
-x-item={0} item (Automatic Copy)
-x-items={0} items (Automatic Copy)
+x-item={0} Item (Automatic Copy)
+x-items={0} Items (Automatic Copy)
